# hermes-exploration-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  registry.json
apis/: anthropic-api.md  brave-search.md  cohere.md  fireworks.md  jina.md  mistral-api.md  openai-api.md  serpapi.md  tavily.md  voyage-ai.md
hermes_exploration/: __init__.py  plugin.py  schemas.py
integrations/: hermes_exploration.py
models/: deepseek-coder.md  gemini-2.5-pro.md  groq.md  llama-3.1-70b.md  mixtral-8x22b.md  openrouter.md  phi-3-medium.md  replicate.md
schemas/: discovery.schema.json
scripts/: build_registry.py  discover_apis.py  discover_models.py  discover_tools.py
tools/: TEMPLATE.md  aider.md  bolt-new.md  cursor.md  dify.md  firecrawl.md  langflow.md  modal.md  n8n.md  openrouter.md  pinecone.md  planetscale.md  qdrant.md  railway.md  replicate.md  resend.md  supabase.md  test-plugin-tool.md  together.md  vercel.md  windsurf.md
