[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-exploration"
version = "0.1.0"
description = "Exploration plugin for Hermes Agent — discover tools, APIs, and models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.21.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[project.entry-points.hermes_agent.plugins]
exploration = "hermes_exploration:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_exploration*"]
